--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.12",
+    "swiper": "^6.5.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
